Ajustes varios, modificaciones para pruebas iniciales de impresion

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Routing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Transactions" />
