Pruebas Arturo modales y multithreading SL

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -384,6 +384,9 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="HtmlPage1.html" />
+    <Content Include="HtmlPage2.html" />
+    <Content Include="HtmlPage3.html" />
     <Content Include="Images\conectado.jpg" />
     <Content Include="Images\plzlogo.jpg" />
     <Content Include="Images\principal.jpg" />
@@ -431,6 +434,48 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\npm.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\css\bootstrap-dialog.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\css\bootstrap-dialog.min.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\js\bootstrap-dialog.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\js\bootstrap-dialog.min.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\css\bootstrap-theme.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\css\bootstrap-theme.min.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\css\bootstrap.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\js\bootstrap.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\js\npm.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\jquery\jquery.min.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\prettify\prettify.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\prettify\run_prettify.js" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.css" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.js" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.min.css" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.min.js" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.structure.css" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.structure.min.css" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.theme.css" />
+    <Content Include="Scripts\PruebaModalJQUI\jquery-ui.theme.min.css" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder1\jquery.js" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-icons_222222_256x240.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-icons_228ef1_256x240.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-icons_ef8c08_256x240.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-icons_ffd27a_256x240.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder2\ui-icons_ffffff_256x240.png" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder3\bootbox.js" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder4\bootstrap-dialog.min.css" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder4\bootstrap-dialog.min.js" />
+    <Content Include="Scripts\PruebaModalJQUI\NewFolder4\run_prettify.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -546,6 +591,12 @@
     <Content Include="Views\OperacionesPinPad\SilverlightPinPad.cshtml" />
     <Content Include="Views\SaldosMovimientos\Index.cshtml" />
     <Content Include="Views\Shared\_MenuLayout.cshtml" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\less\bootstrap-dialog.less" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\css\bootstrap-theme.css.map" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\css\bootstrap.css.map" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap\fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
