Fix Afiliado (Parte 2) : Ajustes de Views/Renombre del Controlador/Repositorio

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -220,8 +220,7 @@
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AfiliadoRepository.cs" />
-    <Compile Include="Models\AfiliadoSuma.cs" />
-    <Compile Include="Models\AfiliadoWeb.cs" />
+    <Compile Include="Models\Afiliado.cs" />
     <Compile Include="Models\Auditing.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
