Tablas Basicas - Menu (Opciones) x Roles

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Models\Role.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RoleMenus.cs" />
     <Compile Include="Models\Saldo.cs" />
     <Compile Include="Models\SaldosMovimientos.cs" />
     <Compile Include="Models\SecurityLevel.cs">
@@ -546,6 +547,7 @@
     <Content Include="Views\Error\Error404.cshtml" />
     <Content Include="Views\Error\SessionExpired.cshtml" />
     <Content Include="Views\User\Roles.cshtml" />
+    <Content Include="Views\Role\Menus.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
