--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -546,6 +546,10 @@
     <Content Include="Views\Error\Error404.cshtml" />
     <Content Include="Views\Error\SessionExpired.cshtml" />
     <Content Include="Views\User\Roles.cshtml" />
+    <Content Include="Views\Afiliado\OperacionesImpresora.cshtml" />
+    <Content Include="Views\Afiliado\OperacionesPinPad.cshtml" />
+    <Content Include="Views\Afiliado\SilverlightPinPad.cshtml" />
+    <Content Include="Views\Afiliado\SilverlightImpresora.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
