ignorando archivos excluidos

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ FakesAssemblies/
 /Suma2Lealtad/Scripts/PruebaModalJQUI/NewFolder1
 /Suma2Lealtad/Scripts/PruebaModalJQUI/NewFolder2
 /Suma2Lealtad/Scripts/PruebaModalJQUI
+/packages/EntityFramework.5.0.0
