--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -28,7 +28,7 @@
     <add key="WSCARDS" value="http://172.20.1.18/CardsREST/ServiceCards.svc/" />
     <add key="WSWEB" value="http://172.20.1.18/PlazasREST/ServiceREST.svc/" />
     <add key="PASSKEY" value="plazas" />
-    <add key="PATHPICTURE" value="~/Images/" />
+    <add key="PATHPICTURE" value="~/Pictures/" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
