Versión Base R2 y R3. Reorganización y ajustes en Modelo Afiliado, inclusión de servicios WebPlazas y Cards para cargar el modelo. Reorganización y ajustes en Controlador Afiliado. Ciclo de Crear Afiliación completo, Ciclo de Revisar Afiliación completo

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -233,6 +233,8 @@
     <Compile Include="Models\CLIENTE.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ClienteCards.cs" />
+    <Compile Include="Models\ClienteWebPlazas.cs" />
     <Compile Include="Models\CMenu.cs" />
     <Compile Include="Models\Company.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
