GenericView : Definición de ViewModel/Implementación en Afiliado Controller.

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -321,6 +321,7 @@
     </Compile>
     <Compile Include="Models\UserRols.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\ViewModel.cs" />
     <Compile Include="Modules\AppModule.cs" />
     <Compile Include="Modules\AppSession.cs" />
     <Compile Include="Modules\Tarjeta.cs" />
