Commit - Vista Acreditar

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -538,6 +538,8 @@
     <Content Include="Views\Afiliado\PinPadReiniciarPin.cshtml" />
     <Content Include="Views\Afiliado\PinPadCambiarPin.cshtml" />
     <Content Include="Views\Afiliado\ImpresoraImprimirTarjeta.cshtml" />
+    <Content Include="Views\Afiliado\SaldosMovimientos.cshtml" />
+    <Content Include="Views\Afiliado\Acreditar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
