Versión Final R3. Publicada en el 18. Funcionalidad Completa.

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -224,6 +224,7 @@
     </Compile>
     <Compile Include="Models\AfiliadoRepository.cs" />
     <Compile Include="Models\Afiliado.cs" />
+    <Compile Include="Models\AfiliadoSaldosMovimientos.cs" />
     <Compile Include="Models\Auditing.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
