Ajustes a llamadas de servicios cards en repositorio, sólo se envía el número del documento de identificación sin el prefijo

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -382,6 +382,7 @@
     <Content Include="Images\principal.jpg" />
     <Content Include="Picture\V-12919906.jpg" />
     <Content Include="Picture\V-16006920.jpg" />
+    <Content Include="Scripts\bootstrap-filestyle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\html5shiv.min.js" />
