--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -412,7 +412,6 @@
     <Content Include="Images\principal.jpg" />
     <Content Include="Picture\V-12919906.jpg" />
     <Content Include="Picture\V-16006920.jpg" />
-    <Content Include="Scripts\bootstrap-filestyle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\html5shiv.min.js" />
@@ -441,6 +440,7 @@
       <LastGenOutput>SumaLealtad.cs</LastGenOutput>
     </Content>
     <None Include="Properties\PublishProfiles\Suma.pubxml" />
+    <None Include="Properties\PublishProfiles\SumaLealtad.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
