--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -157,6 +157,6 @@
     <iriParsing enabled="true" />
   </uri>
   <connectionStrings>
-    <add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.18;initial catalog=SumaLealtad;user id=sa;password=pl@z@s.14;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.18;initial catalog=SumaLealtad_QA;user id=sa;password=pl@z@s.14;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
