Actualizar .gitignore para ignorar la carpeta Pictures y ajustes en WebConfig utilizar la BD SumaLealtad de desarrollo

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ FakesAssemblies/
 /Suma2Lealtad/Scripts/PruebaModalJQUI/NewFolder2
 /Suma2Lealtad/Scripts/PruebaModalJQUI
 /packages/EntityFramework.5.0.0
+/Suma2Lealtad/Picture
