Cambios al modelo Afiliado para manejo de foto como registro en BD. Cambios en controlador AfiliadoController y en repositorio AfiliadoRepository para la subida del archivo y su inserción en BD, así como para su lectura en la vista Edit. Se creó estructura base para Elementos de Prepago Plazas para R4.

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Controllers\InterestController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\MyDatabaseEntities.cs" />
+    <Compile Include="Controllers\Prepago\AfiliadoPrepagoController.cs" />
     <Compile Include="Controllers\ReasonsBlockController.cs" />
     <Compile Include="Controllers\ReasonsController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
