Inclusión de Campo Tipo de Afiliado en Todas las vistas de Afiliado, inclusión de función que determina tipo de afiliación a crear en base al usuario del sistema, pestañas de wizard inhabilitadas para crear y editar. Estandarización de mensajería de los servicios Web y Cards, revisión y ajuste de las clases RespuestaCards y RespuestaWebPlazas. Ajustes en repositorio AfiliadoRepository para validar RespuestaCards y RespuestaWebPlazas

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -405,6 +405,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="HtmlPage5.html" />
     <Content Include="Icon.png" />
     <Content Include="Images\conectado.jpg" />
     <Content Include="Images\plzlogo.jpg" />
