Commit Tablas Basicas 2 ( Direcciones )

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -197,18 +197,23 @@
     <Compile Include="Controllers\AfiliadoController.cs" />
     <Compile Include="Controllers\AuditingController.cs" />
     <Compile Include="Controllers\ChannelController.cs" />
+    <Compile Include="Controllers\CiudadController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\EstadoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InterestController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
+    <Compile Include="Controllers\MunicipioController.cs" />
     <Compile Include="Controllers\MyDatabaseEntities.cs" />
+    <Compile Include="Controllers\ParroquiaController.cs" />
     <Compile Include="Controllers\ReasonsBlockController.cs" />
     <Compile Include="Controllers\ReasonsController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\SecurityLevelController.cs" />
     <Compile Include="Controllers\StatusController.cs" />
     <Compile Include="Controllers\TypeController.cs" />
+    <Compile Include="Controllers\UrbanizacionController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\AuditingFilter.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -569,6 +574,31 @@
     <Content Include="Views\Afiliado\SuspenderTarjeta.cshtml" />
     <Content Include="Views\Afiliado\BloquearTarjeta.cshtml" />
     <Content Include="Views\Afiliado\ReactivarTarjeta.cshtml" />
+    <Content Include="Views\Estado\Index.cshtml" />
+    <Content Include="Views\Estado\Details.cshtml" />
+    <Content Include="Views\Estado\Create.cshtml" />
+    <Content Include="Views\Estado\Edit.cshtml" />
+    <Content Include="Views\Estado\Delete.cshtml" />
+    <Content Include="Views\Ciudad\Index.cshtml" />
+    <Content Include="Views\Ciudad\Details.cshtml" />
+    <Content Include="Views\Ciudad\Create.cshtml" />
+    <Content Include="Views\Ciudad\Edit.cshtml" />
+    <Content Include="Views\Ciudad\Delete.cshtml" />
+    <Content Include="Views\Municipio\Index.cshtml" />
+    <Content Include="Views\Municipio\Details.cshtml" />
+    <Content Include="Views\Municipio\Create.cshtml" />
+    <Content Include="Views\Municipio\Edit.cshtml" />
+    <Content Include="Views\Municipio\Delete.cshtml" />
+    <Content Include="Views\Parroquia\Index.cshtml" />
+    <Content Include="Views\Parroquia\Details.cshtml" />
+    <Content Include="Views\Parroquia\Create.cshtml" />
+    <Content Include="Views\Parroquia\Edit.cshtml" />
+    <Content Include="Views\Parroquia\Delete.cshtml" />
+    <Content Include="Views\Urbanizacion\Index.cshtml" />
+    <Content Include="Views\Urbanizacion\Details.cshtml" />
+    <Content Include="Views\Urbanizacion\Create.cshtml" />
+    <Content Include="Views\Urbanizacion\Edit.cshtml" />
+    <Content Include="Views\Urbanizacion\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
