Versión Base - Procesar Orden de recarga, realizar abono en cuenta prepago.

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Models\CustomerInterest.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DetalleOrden.cs" />
     <Compile Include="Models\ESTADO.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
@@ -285,6 +286,7 @@
     <Compile Include="Models\Operation.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Orden.cs" />
     <Compile Include="Models\Order.cs">
       <DependentUpon>SumaLealtad.tt</DependentUpon>
     </Compile>
@@ -616,7 +618,8 @@
     <Content Include="Views\Municipio\FilterMunicipio.cshtml" />
     <Content Include="Views\Parroquia\FilterParroquia.cshtml" />
     <Content Include="Views\Urbanizacion\FilterUrbanizacion.cshtml" />
-    <Content Include="Views\CompanyPrepago\RecargaIndividual.cshtml" />
+    <Content Include="Views\CompanyPrepago\Recargas.cshtml" />
+    <Content Include="Views\CompanyPrepago\Ordenes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
